--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </svg>
       </label>
       <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a href="index.html">urku portfolio<sup>tm</sup></a></h1>
+        <h1 class="rk-logo"><img class="nbalogo" src="assets/img/nbalogo.jpeg" alt="" width="70" height="70"><a href="index.html">NBA Mexico<sup>tm</sup></a></h1>
         <nav class="rk-navigation">
           <ul class="rk-menu">
             <li class="active rk-menu__item"><a href="index.html" class="rk-menu__link">Home</a>
@@ -63,7 +63,9 @@
           </form>
         </nav>
       </div>
+      <center><h1>UN VIAJE A LAS FINALES!!</h1></center>
     </header>
+    
     <section class="ae-container-fluid rk-main">
       <input type="radio" name="layout-ctrl" checked id="layout-base" class="layout-ctrl-input">
       <div class="ae-container-fluid rk-layout-ctrl-cont">
@@ -98,71 +100,71 @@
       <section class="ae-container-fluid ae-container-fluid--inner loading rk-portfolio ">
         <div class="rk-portfolio__items"><a href="portfolio-item.html" class="rk-item rk-item--flex item-1 rk-size-12 rk-tosize-6 rk-landscape ">
             <div class="item-meta">
-              <h2>Essential Stationery</h2>
-              <p>Branding</p>
+              <h2>Dallas Mavericks Vs Boston Celtics</h2>
+              <p>FINALES</p>
             </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-2 rk-size-6  rk-portrait ">
             <div class="item-meta">
-              <h2>Pickled Tousled</h2>
-              <p>Art Direction</p>
+              <h2>Luka Doncic</h2>
+              <p>Dallas Mavericks</p>
             </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-3 rk-size-6 rk-tosize-4 rk-portrait rk-tosquare">
             <div class="item-meta">
-              <h2>Waistcoat vegan</h2>
-              <p>Graphic Design</p>
+              <h2>Jayson Tatum</h2>
+              <p>Boston Celtics</p>
             </div></a>
           <div class="rk-items-cont rk-size-6 rk-tosize-8"><a href="portfolio-item.html" class="rk-item rk-item--flex item-4 rk-size-12 rk-tosize-6 rk-landscape ">
               <div class="item-meta">
-                <h2>Tumblr hammock</h2>
-                <p>Packaging</p>
+                <h2>Balon Oficial de La NBA</h2>
+                <p>$2199 MXN</p>
               </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-5 rk-size-12 rk-tosize-6 rk-landscape ">
               <div class="item-meta">
-                <h2>Biodiesel etsy</h2>
-                <p>Branding</p>
+                <h2>LeBron 18</h2>
+                <p>$3999 MXN</p>
               </div></a>
           </div><a href="portfolio-item.html" class="rk-item rk-item--flex item-6 rk-size-6 rk-tosize-4 rk-portrait rk-tosquare">
             <div class="item-meta">
-              <h2>Gentrify artisan</h2>
-              <p>Graphic Design</p>
+              <h2>Jersey Boston Celtics Oficial</h2>
+              <p>$1899 MXN</p>
             </div></a>
           <div class="rk-items-cont rk-size-4 rk-tosize-8"><a href="portfolio-item.html" class="rk-item rk-item--flex item-7 rk-size-12 rk-tosize-6 rk-square ">
               <div class="item-meta">
-                <h2>Plaid austin</h2>
-                <p>Graphic Design</p>
+                <h2>HeadBand Nike</h2>
+                <p>$219 MXN</p>
               </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-8 rk-size-12 rk-tosize-6 rk-square ">
               <div class="item-meta">
-                <h2>Trust fund</h2>
-                <p>Packaging</p>
+                <h2>Rodilleras</h2>
+                <p>$849 MXN</p>
               </div></a>
           </div><a href="portfolio-item.html" class="rk-item rk-item--flex item-9 rk-size-8 rk-tosize-3 rk-square ">
             <div class="item-meta">
-              <h2>Gentrify pork</h2>
-              <p>Branding</p>
+              <h2>Jersey Dallas Mavericks Oficial</h2>
+              <p>$1899 MXN</p>
             </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-10 rk-size-6 rk-tosize-3 rk-portrait rk-tosquare">
             <div class="item-meta  rk-tosmallfont">
-              <h2>Waistcoat ugh</h2>
-              <p>UI/UX</p>
+              <h2>Canasta De Basquetbol Profesional</h2>
+              <p>$22599 MXN</p>
             </div></a>
           <div class="rk-items-cont rk-size-6 rk-tosize-6"><a href="portfolio-item.html" class="rk-item rk-item--flex item-11 rk-size-12 rk-tosize-6 rk-landscape rk-tosquare">
               <div class="item-meta">
-                <h2>Deep v kogi</h2>
-                <p>Graphic Design</p>
+                <h2>Aro De Basquetbol Profesional</h2>
+                <p>$3799 MXN</p>
               </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-12 rk-size-12 rk-tosize-6 rk-landscape rk-tosquare">
               <div class="item-meta">
-                <h2>Venmo trust</h2>
-                <p>Packaging</p>
+                <h2>Curry x Space</h2>
+                <p>$2199 MXN</p>
               </div></a>
           </div><a href="portfolio-item.html" class="rk-item rk-item--flex item-13 rk-size-8 rk-tosize-3 rk-square ">
             <div class="item-meta">
-              <h2>Venmo trust</h2>
-              <p>Ui/UX</p>
+              <h2>Tablero De Basquetbol Profesional</h2>
+              <p>$13159 MXN</p>
             </div></a>
           <div class="rk-items-cont rk-size-4 rk-tosize-6"><a href="portfolio-item.html" class="rk-item rk-item--flex item-14 rk-size-12 rk-tosize-6 rk-square ">
               <div class="item-meta">
-                <h2>Gentrify semiotic</h2>
-                <p>Art Direction</p>
+                <h2>Mangas Jordan</h2>
+                <p>$599 MXN</p>
               </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-15 rk-size-12 rk-tosize-6 rk-square ">
               <div class="item-meta">
-                <h2>Migas artisan</h2>
-                <p>Photography</p>
+                <h2>LaMelo Ball MB.03 Toxic</h2>
+                <p>$5299 MXN</p>
               </div></a>
           </div>
         </div>
