--- a/blog.html
+++ b/blog.html
@@ -27,9 +27,9 @@
         <h1 class="rk-logo"><img class="nbalogo" src="assets/img/nbalogo.jpeg" alt="" width="70" height="70"><a href="index.html">NBA Mexico<sup>tm</sup></a></h1>
         <nav class="rk-navigation">
           <ul class="rk-menu">
-            <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Home</a>
+            <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Inicio</a>
             </li>
-            <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Portfolio</a>
+            <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link"></a>
               <nav class="rk-menu__sub">
                 <ul class="rk-container">
                   <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Flex</a></li>
@@ -39,9 +39,9 @@
                 </ul>
               </nav>
             </li>
-            <li class="active rk-menu__item"><a href="blog.html" class="rk-menu__link">Blog</a>
+            <li class="active rk-menu__item"><a href="blog.html" class="rk-menu__link">Fentanilo</a>
             </li>
-            <li class="rk-menu__item"><a href="#0" class="rk-menu__link">Pages</a>
+            <li class="rk-menu__item"><a href="#0" class="rk-menu__link">Fentanilo</a>
               <nav class="rk-menu__sub">
                 <ul class="rk-container">
                   <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a></li>
@@ -50,7 +50,7 @@
                 </ul>
               </nav>
             </li>
-            <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact Us</a>
+            <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contactanos</a>
             </li>
           </ul>
           <form class="rk-search">
