--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
           <ul class="rk-menu">
             <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Inicio</a>
             </li>
-            <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link"></a>
+            <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link"><li></li></a>
               <nav class="rk-menu__sub">
                 <ul class="rk-container">
                   <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Flex</a></li>
@@ -41,7 +41,7 @@
             </li>
             <li class="active rk-menu__item"><a href="blog.html" class="rk-menu__link">Fentanilo</a>
             </li>
-            <li class="rk-menu__item"><a href="#0" class="rk-menu__link">Fentanilo</a>
+            <li class="rk-menu__item"><a href="#0" class="rk-menu__link"> <li>  </li> </a>
               <nav class="rk-menu__sub">
                 <ul class="rk-container">
                   <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a></li>
