--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </svg>
       </label>
       <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a href="index.html">urku portfolio<sup>tm</sup></a></h1>
+        <h1 class="rk-logo"><img class="nbalogo" src="assets/img/nbalogo.jpeg" alt="" width="70" height="70"><a href="index.html">NBA Mexico<sup>tm</sup></a></h1>
         <nav class="rk-navigation">
           <ul class="rk-menu">
             <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Home</a>
@@ -87,7 +87,7 @@
       <div class="ae-grid">
         <div class="ae-grid__item item-lg-6 item-lg--offset-7">
           <h4 class="ae-u-bolder au-mb-3 conatct__title">Contact Us</h4>
-          <p class="au-mb-4 contact__desc">Say hello using the <a href="#contact-form">contact form </a>below! <br>We're standing by to help.</p>
+          <p class="au-mb-4 contact__desc">Aqui Montramos Algunas sucursales <br>Muy Cerca De Tu Zona! <br>Consulta Tus Dudas Aqui</p>
         </div>
       </div>
       <div class="ae-grid">
@@ -106,8 +106,8 @@
               </button>
             </div>
             <div class="ae-grid__item item-lg-10 au-xs-ta-center au-lg-ta-left">
-              <p class="au-mb-4 contact__addr">123 Everystreet Crescent<br>Somewheresville, CA<br>12345 USA</p>
-              <p> <span class="contact__phone"> <span class="rk-light-color">Phone  </span> (301) 123-4567</span><br><span class="contact__email au-block au-truncate"> <span class="rk-light-color">Email &nbsp;&nbsp; </span><a href="#0">infocompany@contact.com</a></span></p>
+              <p class="au-mb-4 contact__addr">123 Everystreet Crescent<br>Somewheresville, CA<br>12345 MEX</p>
+              <p> <span class="contact__phone"> <span class="rk-light-color">Telefono  </span> (301) 123-4567</span><br><span class="contact__email au-block au-truncate"> <span class="rk-light-color">Email &nbsp;&nbsp; </span><a href="#0">infocompany@contact.com</a></span></p>
             </div>
             <div class="contact_spacer au-none au-lg-block"></div>
           </div>
