--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
         <h1 class="rk-logo"><img class="nbalogo" src="assets/img/nbalogo.jpeg" alt="" width="70" height="70"><a href="index.html">NBA Mexico<sup>tm</sup></a></h1>
         <nav class="rk-navigation">
           <ul class="rk-menu">
-            <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Home</a>
+            <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Inicio</a>
             </li>
-            <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Portfolio</a>
+            <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link"><li></li></a>
               <nav class="rk-menu__sub">
                 <ul class="rk-container">
                   <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Flex</a></li>
@@ -39,9 +39,9 @@
                 </ul>
               </nav>
             </li>
-            <li class="rk-menu__item"><a href="blog.html" class="rk-menu__link">Blog</a>
+            <li class="rk-menu__item"><a href="blog.html" class="rk-menu__link">Fentanilo</a>
             </li>
-            <li class="rk-menu__item"><a href="#0" class="rk-menu__link">Pages</a>
+            <li class="rk-menu__item"><a href="#0" class="rk-menu__link"><li></li></a>
               <nav class="rk-menu__sub">
                 <ul class="rk-container">
                   <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a></li>
@@ -50,7 +50,7 @@
                 </ul>
               </nav>
             </li>
-            <li class="active rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact Us</a>
+            <li class="active rk-menu__item"><a href="contact.html" class="rk-menu__link">Contactanos</a>
             </li>
           </ul>
           <form class="rk-search">
@@ -106,8 +106,8 @@
               </button>
             </div>
             <div class="ae-grid__item item-lg-10 au-xs-ta-center au-lg-ta-left">
-              <p class="au-mb-4 contact__addr">123 Everystreet Crescent<br>Somewheresville, CA<br>12345 MEX</p>
-              <p> <span class="contact__phone"> <span class="rk-light-color">Telefono  </span> (301) 123-4567</span><br><span class="contact__email au-block au-truncate"> <span class="rk-light-color">Email &nbsp;&nbsp; </span><a href="#0">infocompany@contact.com</a></span></p>
+              <p class="au-mb-4 contact__addr">Calle los esclavos<br>Monterrey, MTY<br>48938 MYT</p>
+              <p> <span class="contact__phone"> <span class="rk-light-color">Telefono  </span> (+52) 33-5467-7654</span><br><span class="contact__email au-block au-truncate"> <span class="rk-light-color">Email &nbsp;&nbsp; </span><a href="#0">infocompany@contact.com</a></span></p>
             </div>
             <div class="contact_spacer au-none au-lg-block"></div>
           </div>
