--- a/blog.html
+++ b/blog.html
@@ -115,6 +115,45 @@
         se puede encontrar mezclado con otras drogas como heroína, cocaína, metanfetamina y MDMA, lo cual vuelve el consumo de cualquiera de estas sustancias aún más peligroso
                 El fentanilo fabricado ilícitamente tiene un proceso parecido a las pastillas y con una presentación similar a dulces.
                 Se puede administrar en forma inyectable, en un parche que se coloca sobre la piel o en pastillas que se disuelven en la boca.</p>
+
+                <p>Historia</p>
+                <p> Fue desarrollado en 1959 y se introdujo 
+                  en la década de los años 60 del siglo 
+                  pasado como anestésico intravenoso. 
+                  Se fabrica y distribuye legalmente en 
+                  los Estados Unidos.
+                   Los productos farmacéuticos legal
+                  mente distribuidos que lo contienen 
+                  son desviados al mercado negro por 
+                  medio del robo, recetas fraudulentas 
+                  y distribución ilícita que realizan  
+                  pacientes, médicos, enfermeras, 
+                  asistentes médicos, enfermeras practi
+                  cantes y farmacéuticos.
+                   Desde 2011 hasta 2021, las sobre
+                  dosis fatales asociadas con el abuso de 
+                  productos clandestinos de fentanilo y sus análo
+                  gos, así como las acciones legales relacionadas al 
+                  mismo aumentaron notablemente.
+                   Según los Centros para el Control y 
+                  Prevención de las Enfermedades, las muertes 
+                  por sobredosis en las que se utilizaron opioides 
+                  sintéticos, excluyendo la metadona, fueron de 
+                  más de 2 mil 600 muertes en 2011 y 2012, pero de 
+                  2013 a 2021, el número de sobredosis por opioides 
+                  sintéticos, excluyendo la metadona, aumentaron 
+                  dramáticamente cada año hasta llegar a más de 
+                  68 mil en 2021. Los decesos por sobredosis en 
+                  esta categoría fueron de más de 258 mil entre 
+                  2013 y 2021.
+                   Este tipo de sobredosis con opioides sintéticos 
+                  fueron lideradas por fentanilo producido ilegal
+                  mente, incluyendo sus productos análogos. De 
+                  acuerdo con los datos de muerte por sobredosis, 
+                  el tráfico, la distribución y el abuso de fentanilo y 
+                  sus análogos producidos ilícitamente están corre
+                  lacionados con el dramático incremento asociado 
+                  de fallecimientos por sobredosis</p>
             </div>
 
             <center><p class="blog-info__excerpt">Efectos inmediatos
@@ -129,7 +168,10 @@
               Señales de alerta
               <br>*Cambios bruscos de humor, de entusiasmo a agresividad.
               <br>*Cambios en los hábitos de sueño.
-T<br>*endencia a manifestar conductas arriesgadas o de búsqueda de emociones extremas.
+<br>*Tendencia a manifestar conductas arriesgadas o de búsqueda de emociones extremas.
+
+
+
                         </div></center>
 
             <div class="blog-meta"><a href="blog-post.html" class="ae-u-bolder blog-meta__comments">3 Comments</a><span class="ae-kappa ae-u-bold blog-meta__date">August, 12 2015</span><a href="#0" class="arrow-button blog-meta__read-more">Read More<span class="arrow-cont">
