--- a/contact.html
+++ b/contact.html
@@ -30,23 +30,14 @@
             <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Inicio</a>
             </li>
             <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link"><li></li></a>
-              <nav class="rk-menu__sub">
-                <ul class="rk-container">
-                  <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Flex</a></li>
-                  <li class="rk-menu__item"><a href="portfolio-alt.html" class="rk-menu__link">Switch</a></li>
-                  <li class="rk-menu__item"><a href="portfolio-raw.html" class="rk-menu__link">Static</a></li>
-                  <li class="rk-menu__item"><a href="portfolio-masonry.html" class="rk-menu__link">Masonry</a></li>
-                </ul>
-              </nav>
+              
             </li>
             <li class="rk-menu__item"><a href="blog.html" class="rk-menu__link">Fentanilo</a>
             </li>
             <li class="rk-menu__item"><a href="#0" class="rk-menu__link"><li></li></a>
               <nav class="rk-menu__sub">
                 <ul class="rk-container">
-                  <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a></li>
-                  <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Documentation</a></li>
-                  <li class="rk-menu__item"><a href="design-styles.html" class="rk-menu__link">Design Styles</a></li>
+                  
                 </ul>
               </nav>
             </li>
@@ -138,7 +129,7 @@
             <li class="active rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact</a>
             </li>
           </ul>
-          <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">2015 URKU PORTFOLIO </span>All Right Reserved.</p>
+          <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">2024 NBA Mexico </span>All Right Reserved.</p>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center"><a href="#0" class="rk-social-btn ">
             <svg>
