--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
           </ul>
           <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">2015 URKU PORTFOLIO </span>All Right Reserved.</p>
         </div>
-        <div class="ae-grid__item item-lg-4 au-xs-ta-center"><a href="#0" class="rk-social-btn ">
+        <div class="ae-grid__item item-lg-4 au-xs-ta-center">
+          <a href="assets/img/senal-de-advertencia.png"></a>
+          <a href="#0" class="rk-social-btn ">
             <svg>
               <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
             </svg></a><a href="#0" class="rk-social-btn ">
@@ -187,8 +189,8 @@
               <use xlink:href="assets/img/warning_24dp_FILL0_wght400_GRAD0_opsz24.svg"></use>
             </svg></a></div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-          <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">contact@urkuportfolio.com </a></span></p>
-          <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
+          <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">contact@NBAmexico.com </a></span></p>
+          <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Alexander.</a></p>
           
         </div>
       </div>
